# meles-rs

./: Cargo.toml  README.md
ceed/ex1-volume/: Cargo.toml
ceed/ex2-surface/: Cargo.toml
ceed/mesh/: Cargo.toml
examples/: meles.yml
examples/bps/: Cargo.toml  bps1.yml
examples/bps/src/: main.rs
petsc/bps/: Cargo.toml
petsc/bps/src/: main.rs
petsc/petsc-ceed-utils/: Cargo.toml
petsc/petsc-ceed-utils/src/: lib.rs
src/: ceed_bps.rs  dm.rs  lib.rs  petsc_ops.rs
