[package]
name = "bps"
version = "0.1.0"
authors = [
    "Jeremy L Thompson <jeremy@jeremylt.org>",
]
edition = "2018"

[dependencies]
structopt = { version = "0.3", default-features = false }
libceed = { path = "../../../libCEED/rust/libceed" }
petsc-rs = { path = "../../../petsc-rs" }
petsc-ceed-utils = { path = "../petsc-ceed-utils" }
